[package]
name = "lnp-core"
version = "0.6.0"
license = "MIT"
authors = ["Dr Maxim Orlovsky <orlovsky@pandoracore.com>"]
description = "LNP Core Library: rust implementation of modular lightning channels architecture"
repository = "https://github.com/LNP-BP/lnp-core"
homepage = "https://lnp-bp.org"
keywords = ["bitcoin", "lightning", "rgb", "smart-contracts", "lnp-bp"]
categories = ["cryptography::cryptocurrencies"]
readme = "README.md"
exclude = [".github", "contrib", "lightning_encoding", "lnp2p"]
edition = "2021"
rust-version = "1.56.1"

[lib]
name = "lnp"
path = "src/lib.rs"
crate-type = ["rlib", "staticlib"]

[dependencies]
amplify = "3.12.0"
strict_encoding = "1.8.1"
lightning_encoding = "0.6.1"
descriptor-wallet = { version = "0.6.1", features = ["keygen"] }
lnp2p = { version = "0.6.0", path = "lnp2p", features = ["strict_encoding"] }
lnpbp = "0.6.0"
bitcoin = { version = "0.28.1", features = ["rand"] }
secp256k1 = { version = "0.22.1", features = ["global-context-less-secure"] }
internet2 = { version = "0.6.0", default-features = false, features = ["keygen"] }
serde_crate = { package = "serde", version = "1", features = ["derive"], optional = true }
serde_with = { version = "1.8", features = ["hex"], optional = true }

[features]
default = []
all = ["serde"]
serde = ["serde_crate", "serde_with", "amplify/serde", "bitcoin/use-serde", "lnp2p/serde", "descriptor-wallet/serde"]

[workspace]
members = [".", "lnp2p"]
exclude = ["lightning_encoding", "dep_tests"]
default-members = [".", "lnp2p"]
