[package]
name = "lightning_encoding"
version = "0.4.0-beta.1"
license = "Apache-2.0"
authors = ["Dr Maxim Orlovsky <orlovsky@pandoracore.com>"]
description = "Network encoding for lightning network peer protocol data types"
repository = "https://github.com/LNP-BP/lnp-core"
homepage = "https://lnp-bp.org"
keywords = ["bitcoin", "lightning", "rgb", "smart-contracts", "lnp-bp"]
categories = ["cryptography::cryptocurrencies", "network-programming"]
readme = "README.md"
edition = "2018"

[lib]
name = "lightning_encoding"
path = "src/lib.rs"
crate-type = ["rlib", "staticlib"]

[dependencies]
amplify = { version = "3", features = ["stringly_conversions"] }
amplify_derive = "2.4.3"
strict_encoding = "1"
lightning_encoding_derive = { version = "0.4", optional = true }
descriptor-wallet = "0.4.0"
bitcoin = "0.26"

[features]
default = ["derive"]
all = ["derive"]
derive = ["lightning_encoding_derive"]
