[package]
name = "lightning_encoding"
version = "0.5.0-beta.3"
license = "Apache-2.0"
authors = ["Dr Maxim Orlovsky <orlovsky@pandoracore.com>"]
description = "Network encoding for lightning network peer protocol data types"
repository = "https://github.com/LNP-BP/lnp-core"
homepage = "https://lnp-bp.org"
keywords = ["bitcoin", "lightning", "rgb", "smart-contracts", "lnp-bp"]
categories = ["cryptography::cryptocurrencies", "network-programming"]
readme = "README.md"
edition = "2018"

[lib]
name = "lightning_encoding"
path = "src/lib.rs"
crate-type = ["rlib", "staticlib"]

[dependencies]
amplify = "3.9.1"
strict_encoding = "1.7.4"
lightning_encoding_derive = { version = "0.5.0", optional = true, path = "./derive" }
descriptor-wallet = "0.5.0-alpha.3"
lnpbp = "0.5.0-beta.3"
bitcoin = "0.27.0"
rgb-core = { version = "0.5.0-alpha.1", optional = true, path = "../../../rgb/rgb-core" }
chrono = "0.4.19"

[features]
default = ["derive"]
all = ["derive", "rgb"]
derive = ["lightning_encoding_derive"]
rgb = ["rgb-core"]
