[package]
name = "lnp2p"
version = "0.7.0-alpha.1"
license = "MIT"
authors = ["Dr Maxim Orlovsky <orlovsky@pandoracore.com>"]
description = "LN P2P Library: rust implementation of lightning network peer protocols (BOLT-1, 2, 7, 9, Bifrost)"
repository = "https://github.com/LNP-BP/lnp-core"
homepage = "https://lnp-bp.org"
keywords = ["bitcoin", "lightning", "lnp", "lnp-bp", "bifrost"]
categories = ["cryptography::cryptocurrencies", "network-programming"]
readme = "../README.md"
edition = "2021"
rust-version = "1.56.1"

[lib]
name = "lnp2p"
path = "src/lib.rs"
crate-type = ["rlib", "staticlib"]

[dependencies]
amplify = { version = "3.12.0", features = ["hex", "rand"] }
lnpbp = "0.7.0"
bp-core = "0.7.0-beta.3"
strict_encoding = { version = "1.8.1", optional = true, features = ["chrono"] }
lightning_encoding = "0.7.1"
bitcoin_scripts = "0.7.0"
psbt = "0.7.1"
miniscript = "7.0.0"
bitcoin = "0.28.1"
secp256k1 = { version = "0.22.1", features = ["global-context"] }
internet2 = { version = "0.7.0-rc.1", default-features = false, features = ["derive"] }
serde_crate = { package = "serde", version = "1", features = ["derive"], optional = true }
serde_with = { version = "1.5", features = ["hex"], optional = true }
lazy_static = "1.4"
chrono = "0.4"

[features]
default = ["legacy"]
all = ['bifrost', "serde"]
legacy = []
bifrost = ["strict_encoding"]
serde = ["serde_crate", "serde_with", "amplify/serde", "bitcoin/use-serde"]
