[package]
name = "lnp2p"
version = "0.8.0"
license = "MIT"
authors = ["Dr Maxim Orlovsky <orlovsky@pandoracore.com>"]
description = "LN P2P Library: rust implementation of lightning network peer protocols (BOLT and Bifrost)"
repository = "https://github.com/LNP-BP/lnp-core"
homepage = "https://lnp-bp.org"
keywords = ["bitcoin", "lightning", "lnp", "lnp-bp", "bifrost"]
categories = ["cryptography::cryptocurrencies", "network-programming"]
readme = "../README.md"
edition = "2021"
rust-version = "1.59.0"

[lib]
name = "lnp2p"
path = "src/lib.rs"
crate-type = ["rlib", "staticlib"]

[dependencies]
amplify = { version = "3.13.0", features = ["hex", "rand"] }
lnpbp = "0.8.0"
bp-core = "0.8.0"
strict_encoding = { version = "0.8.1", optional = true, features = ["chrono"] }
lightning_encoding = { version = "0.8.0", optional = true }
bitcoin_scripts = "0.8.0"
psbt = "0.8.0"
miniscript = "7.0.0"
bitcoin = "0.28.1"
secp256k1 = { version = "0.22.1", features = ["global-context"] }
internet2 = { version = "0.8.0", default-features = false, features = ["derive"] }
serde_crate = { package = "serde", version = "1", features = ["derive"], optional = true }
serde_with = { version = "1.5", features = ["hex"], optional = true }
once_cell = "1.12.0"
chrono = "0.4"

[features]
default = ["bolt", "strict_encoding"] # Remove strict encoding requirement
all = ['bifrost', "serde"]
bolt = ["lightning_encoding"]
bifrost = ["strict_encoding"]
serde = ["serde_crate", "serde_with", "amplify/serde", "bitcoin/use-serde"]
