[package]
name = "lnp2p"
version = "0.9.1"
license = "MIT"
authors = ["Dr Maxim Orlovsky <orlovsky@pandoracore.com>"]
description = "LN P2P Library: rust implementation of lightning network peer protocols (BOLT and Bifrost)"
repository = "https://github.com/LNP-BP/lnp-core"
homepage = "https://lnp-bp.org"
keywords = ["bitcoin", "lightning", "lnp", "lnp-bp", "bifrost"]
categories = ["cryptography::cryptocurrencies", "network-programming"]
readme = "../README.md"
edition = "2021"
rust-version = "1.59.0"

[lib]
name = "lnp2p"
path = "src/lib.rs"
crate-type = ["rlib", "staticlib"]

[dependencies]
amplify = { version = "3.13.1", features = ["hex", "rand"] }
lnpbp = "0.9.0"
bp-core = "0.9.0"
strict_encoding = { version = "0.9.0", optional = true, features = ["chrono", "miniscript"] }
lightning_encoding = { version = "0.9.1", optional = true }
bitcoin_scripts = "0.9.0"
psbt = "0.9.0"
miniscript = "9.0.0"
bitcoin = "0.29.2"
secp256k1 = { version = "0.24.2", features = ["global-context"] }
internet2 = { version = "0.9.0", default-features = false, features = ["derive"] }
serde_crate = { package = "serde", version = "1", features = ["derive"], optional = true }
serde_with = { version = "1.14", features = ["hex"], optional = true }
once_cell = "1.12.0"
chrono = "0.4"

[features]
default = ["bolt", "strict_encoding"]
all = ['bifrost', "serde"]
bolt = ["lightning_encoding", "strict_encoding"] # Remove strict encoding requirement
bifrost = ["strict_encoding", "bolt"]
serde = ["serde_crate", "serde_with", "amplify/serde", "bitcoin/serde"]

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]
