[package]
name = "lightning_encoding_derive"
version = "0.4.0-alpha.1"
license = "Apache-2.0"
authors = ["Dr. Maxim Orlovsky <orlovsky@pandoracore.com>"]
description = "Derive macros for lightning network peer protocol encodings"
repository = "https://github.com/internet2-org/internet2"
homepage = "https://github.com/internet2-org"
keywords = ["lnp-bp", "lightning", "networking", "internet2", "proc-macro"]
categories = ["encoding", "parsing", "network-programming"]
readme = "../README.md"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
quote = "1"
syn = "1"
proc-macro2 = "1"
amplify = "3"
amplify_derive_helpers = "0.0.4"

[dev-dependencies]
lightning_encoding = { path = ".." }
